--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
         "import/extensions": "off",
         "linebreak-style": "off",
         "no-console": "off",
+        "no-restricted-syntax": "off",
         "no-multiple-empty-lines": [
             "warn",
             {
