--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-gyp": "^5.1.1",
     "node-gyp-build": "^4.2.2",
     "rebuild": "^0.1.2",
+    "technicalindicators": "^3.1.0",
     "zeromq": "^6.0.0-beta.6"
   },
   "devDependencies": {
