--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         ],
         "prefer-const": "off",
         "lines-between-class-members": "off",
+        "max-len": "off",
         "spaced-comment": "off",
         "no-underscore-dangle": "off",
         "strict": "off",
