--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,13 +45,7 @@
         "linebreak-style": "off",
         "no-console": "off",
         "no-restricted-syntax": "off",
-        "no-multiple-empty-lines": [
-            "warn",
-            {
-                "max": 2,
-                "maxEOF": 1
-            }
-        ],
+        "no-multiple-empty-lines": "off",
         "no-undef": "off",
         "no-unused-expressions": "warn",
         "class-methods-use-this": "off",
